Ensure UI elements contrast with the right frame color.

With a Windows-drawn titlebar we need to make sure we're reporting the
frame color that Windows uses so that elements like the incognito icon
will contrast correctly. This patch changes theme_service_win to not
assume custom titlebar mode is on when calculating colors.

R=estade@chromium.org
BUG=676566

Review-Url: https://codereview.chromium.org/2605443002
Cr-Commit-Position: refs/heads/master@{#441254}

Former-commit-id: b052bbc63d486e85df9da4b073c5decd16972a4d